@@ -6,22 +6,20 @@ import com.marcinsz.eventmanagementsystem.model.Role;
 import com.marcinsz.eventmanagementsystem.model.User;
 import com.marcinsz.eventmanagementsystem.request.CreateUserRequest;
 import lombok.Data;
-import org.springframework.stereotype.Component;
+import lombok.NoArgsConstructor;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Component
 @Data
+@NoArgsConstructor
 public class UserMapper {
 
-    public UserDto convertUserToUserDto(User user) {
-        if (user == null) {
+    public static UserDto convertUserToUserDto(User user){
+        if(user == null){
             throw new NullPointerException("User should not be null.");
         }
-        return new UserDto(
-                user.getId(),
+        return new UserDto(user.getId(),
                 user.getFirstName(),
                 user.getLastName(),
                 user.getEmail(),
@@ -30,16 +28,14 @@ public class UserMapper {
                 user.getRole(),
                 user.getPhoneNumber(),
                 user.getAccountNumber(),
-                user.getAccountStatus()
-        );
+                user.getAccountStatus());
     }
 
-    public User convertCreateUserRequestToUser(CreateUserRequest createUserRequest) {
-        if (createUserRequest == null) {
+    public static User convertCreateUserRequestToUser(CreateUserRequest createUserRequest){
+        if(createUserRequest == null){
             throw new NullPointerException("CreateUserRequest should not be null.");
         }
-        return new User(
-                createUserRequest.getFirstName(),
+        return new User(createUserRequest.getFirstName(),
                 createUserRequest.getLastName(),
                 createUserRequest.getEmail(),
                 createUserRequest.getUsername(),
@@ -48,16 +44,14 @@ public class UserMapper {
                 Role.USER,
                 createUserRequest.getPhoneNumber(),
                 createUserRequest.getAccountNumber(),
-                "ACTIVE"
-        );
+                "ACTIVE");
     }
 
-    public OrganiserDto convertUserToOrganiserDto(User user) {
-        if (user == null) {
-            throw new IllegalArgumentException("User should not be null.");
+    public static OrganiserDto convertUserToOrganiserDto(User user){
+        if(user == null){
+            throw new NullPointerException("User should not be null.");
         }
-        return new OrganiserDto(
-                user.getFirstName(),
+        return new OrganiserDto(user.getFirstName(),
                 user.getLastName(),
                 user.getUsername(),
                 user.getEmail(),
@@ -65,23 +59,12 @@ public class UserMapper {
         );
     }
 
-    public List<UserDto> convertListUserToListUserDto(List<User> userList) {
-        if (userList == null) {
+    public static List<UserDto> convertListUserToListUserDto(List<User> userList){
+        if(userList == null){
             return Collections.emptyList();
         }
         return userList.stream()
-                .map(user -> new UserDto(
-                        user.getId(),
-                        user.getFirstName(),
-                        user.getLastName(),
-                        user.getEmail(),
-                        user.getUsername(),
-                        user.getBirthDate(),
-                        user.getRole(),
-                        user.getPhoneNumber(),
-                        user.getAccountNumber(),
-                        user.getAccountStatus()
-                ))
-                .collect(Collectors.toList());
+                .map(UserMapper::convertUserToUserDto)
+                .toList();
     }
 }
